# x-heep-femu

imp/hls/: config.cmdline
imp/hls/hls_projects/Virtual_ADC/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
imp/hls/hls_projects/Virtual_ADC/.apc/: autopilot.apfmapping
imp/hls/hls_projects/Virtual_ADC/baseline/: baseline.aps  baseline.directive  baseline_data.json  directives.tcl  script.tcl
imp/hls/hls_projects/Virtual_ADC/baseline/.autopilot/: .automg_exit  .autopilot_exit
imp/hls/hls_projects/Virtual_ADC/baseline/.autopilot/db/: .message_impl.xml  .message_syn.xml  Buffer_ADC.DependenceCheck.tcl  Buffer_ADC.adb  Buffer_ADC.adb.xml  Buffer_ADC.bind.adb  Buffer_ADC.compgen.dataonly.tcl  Buffer_ADC.compgen.tcl  Buffer_ADC.constraint.tcl  Buffer_ADC.design.xml  Buffer_ADC.rtl_wrap.cfg.tcl  Buffer_ADC.sched.adb  Buffer_ADC.sched.adb.xml  Buffer_ADC.tbgen.tcl  Buffer_ADC.verbose.bind.rpt  Buffer_ADC.verbose.bind.rpt.xml  Buffer_ADC.verbose.rpt  Buffer_ADC.verbose.rpt.xml  Buffer_ADC.verbose.sched.rpt  Buffer_ADC_dataflow_ana.wcfg  a.g.0.bc  a.g.1.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.1.lower.bc  (+34 more)
imp/hls/hls_projects/Virtual_ADC/baseline/.debug/: Buffer_ADC.protoinst
imp/hls/hls_projects/Virtual_ADC/baseline/impl/ip/drivers/Buffer_ADC_v1_0/src/: CMakeLists.txt  xbuffer_adc_linux.c
imp/hls/ips/Virtual_ADC_module/: component.xml
imp/hls/ips/Virtual_ADC_module/hdl/vhdl/: Buffer_ADC_control_s_axi.vhd
imp/hls/virtual_adc/: buffer_adc.cpp  buffer_adc.h  main.cpp
imp/rtl/: ADC_access_counter.v
imp/scripts/: generate_virtual_ADC_hls.tcl
(+26 files in other folders)
